[package]
name = "fmgt"
version = "0.1.0"
authors = ["lluz55 <lucasluz55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
libc = "0.2.81"
lazy_static = "1.4.0"
parking_lot = "0.11.1"